# spotify-stats

./: .gitignore  LICENSE  Makefile  README.md  config.sample  pyproject.toml  requirements.txt  setup.py
src/: gui_helper.py  m_config.py  m_util.py  main.py  sps_config.py  ui_main.py
ui/: main.ui
util/: create_cfg.sh
