[tool.poetry]
name = "spotify-stats"
version = "0.1.0"
description = ""
authors = ["Gennady Koshkin <gkeep77@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.26.0"
spotipy = "^2.19.0"
PyQt5 = "^5.15.6"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
